Add new components and update existing ones for enhanced UI and functionality
- Introduced AddressBookContainer and TransactionsContainer components for improved address book and transaction management.
- Updated PendingReceivePage to use PendingRecieveContainer and PendingRequestPage to utilize the new DashboardContainer.
- Enhanced ClientLayout with a customized Toaster component for better user notifications.
- Added new modal components: CreateNewGroupModal and TransactionDetailModal for managing group payments and transaction details.
- Integrated QR code functionality with qr-code-styling package for address display.
- Updated ActionButton component to support different button types.
- Added new SVG assets for UI elements and improved overall layout consistency.

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "git": "link:github.com:demox-labs/miden-wallet-adapter.git",
     "miden-wallet-adapter-reactui": "link:@demox-labs/miden-wallet-adapter-reactui",
     "next": "15.3.1",
+    "qr-code-styling": "^1.9.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
