Enhance transaction management and UI components
- Added new API service for transaction handling, including consumable and send transaction functionalities.
- Integrated react-hook-form for improved form handling in SendTransactionForm, AmountInput, and RecipientInput components.
- Updated PendingRecieveContainer to manage transaction consumption with checkboxes for selection.
- Refactored TransactionOptions to utilize a dropdown for recallable time selection.
- Improved ClientLayout and other components for better structure and styling consistency.

--- a/.prettierrc
+++ b/.prettierrc
@@ -3,6 +3,7 @@
   "printWidth": 120,
   "tabWidth": 2,
   "trailingComma": "all",
+  "proseWrap": "always",
   "importOrder": ["^react$", "^next/(.*)$", "<THIRD_PARTY_MODULES>", "^@heroicons/(.*)$", "^~~/(.*)$"],
   "importOrderSortSpecifiers": true
 }
