--- a/packages/nextjs/package.json
+++ b/packages/nextjs/package.json
@@ -16,7 +16,7 @@
     "@demox-labs/miden-wallet-adapter-react": "^0.1.0",
     "@demox-labs/miden-wallet-adapter-reactui": "^0.1.3",
     "@demox-labs/miden-wallet-adapter-trident": "^0.1.2",
-    "@tanstack/react-query": "^5.81.5",
+    "@tanstack/react-query": "^5.83.0",
     "axios": "^1.9.0",
     "git": "link:github.com:demox-labs/miden-wallet-adapter.git",
     "miden-wallet-adapter-reactui": "link:@demox-labs/miden-wallet-adapter-reactui",
@@ -26,6 +26,8 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.60.0",
     "react-hot-toast": "^2.5.2",
+    "viem": "2.x",
+    "wagmi": "^2.16.0",
     "zustand": "^5.0.6"
   },
   "devDependencies": {
