--- a/packages/nextjs/package.json
+++ b/packages/nextjs/package.json
@@ -16,6 +16,7 @@
     "@demox-labs/miden-wallet-adapter-react": "^0.1.0",
     "@demox-labs/miden-wallet-adapter-reactui": "^0.1.3",
     "@demox-labs/miden-wallet-adapter-trident": "^0.1.2",
+    "@reactour/tour": "^3.8.0",
     "@tanstack/react-query": "^5.81.5",
     "axios": "^1.9.0",
     "git": "link:github.com:demox-labs/miden-wallet-adapter.git",
