--- a/packages/nextjs/package.json
+++ b/packages/nextjs/package.json
@@ -21,6 +21,7 @@
     "axios": "^1.9.0",
     "blo": "^2.0.0",
     "git": "link:github.com:demox-labs/miden-wallet-adapter.git",
+    "immer": "^10.1.1",
     "miden-wallet-adapter-reactui": "link:@demox-labs/miden-wallet-adapter-reactui",
     "next": "15.3.1",
     "qr-code-styling": "^1.9.2",
