--- a/packages/nextjs/package.json
+++ b/packages/nextjs/package.json
@@ -27,6 +27,7 @@
     "next": "15.3.1",
     "qr-code-styling": "^1.9.2",
     "react": "^19.0.0",
+    "react-day-picker": "^9.8.1",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.60.0",
     "react-hot-toast": "^2.5.2",
