--- a/packages/nextjs/package.json
+++ b/packages/nextjs/package.json
@@ -32,6 +32,7 @@
     "react-hook-form": "^7.60.0",
     "react-hot-toast": "^2.5.2",
     "react-loading-skeleton": "^3.5.0",
+    "react-tooltip": "^5.29.1",
     "viem": "2.x",
     "wagmi": "^2.16.0",
     "zustand": "^5.0.6"
