--- a/packages/nextjs/package.json
+++ b/packages/nextjs/package.json
@@ -47,6 +47,8 @@
     "@types/react-dom": "^19",
     "@types/react-is": "^19",
     "@typescript-eslint/parser": "^8.31.0",
+    "eslint": "^9",
+    "eslint-config-next": "15.5.2",
     "prettier": "^3.5.3",
     "tailwindcss": "^4",
     "typescript": "^5"
