chore: update wallet adapter dependencies and enhance transaction handling
- Added new wallet adapter packages: @demox-labs/miden-wallet-adapter-base@0.6.1 and @demox-labs/miden-wallet-adapter-miden@0.6.0 in package.json and yarn.lock.
- Refactored components to utilize the new wallet adapter, improving wallet connection handling and transaction requests.
- Updated BatchPage and SendTransactionForm to integrate new transaction request logic using the Miden SDK.
- Enhanced error handling and user feedback for wallet connection and transaction processes.

--- a/packages/nextjs/package.json
+++ b/packages/nextjs/package.json
@@ -12,7 +12,8 @@
   },
   "dependencies": {
     "@demox-labs/miden-sdk": "0.11.6",
-    "@demox-labs/miden-wallet-adapter-base": "^0.6.0",
+    "@demox-labs/miden-wallet-adapter-base": "^0.6.1",
+    "@demox-labs/miden-wallet-adapter-miden": "0.6.0",
     "@demox-labs/miden-wallet-adapter-react": "^0.6.0",
     "@demox-labs/miden-wallet-adapter-reactui": "^0.6.0",
     "@demox-labs/miden-wallet-adapter-trident": "^0.1.5",
