feat: integrate draggable table functionality and enhance UI components
- Added draggable table feature to the Table component, allowing users to reorder rows.
- Introduced DraggableTableExample component to demonstrate the new functionality.
- Updated Table, TabContainer, and ToggleSwitch components for improved usability and styling.
- Enhanced CSS variables in theme.css and globals.css for better table styling.
- Added new SVG icons for drag handles and improved visual feedback in the UI.

--- a/packages/nextjs/package.json
+++ b/packages/nextjs/package.json
@@ -16,6 +16,9 @@
     "@demox-labs/miden-wallet-adapter-react": "^0.6.0",
     "@demox-labs/miden-wallet-adapter-reactui": "^0.6.0",
     "@demox-labs/miden-wallet-adapter-trident": "^0.1.5",
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@reactour/tour": "^3.8.0",
     "@tanstack/react-query": "^5.81.5",
     "axios": "^1.9.0",
